src/test/testFiles/valid/nestedForLoop.manimdsl
let x = 0;
for (i in range(1, 3)) {
    for (j in range(i, 3)) {
        x = i * j;
    }
}
