src/test/testFiles/invalid/semanticErrors/incompatibleReturnType.manimdsl
fun func(x: number) {
return 5;
}

let z = func(5);